# Cricket-Headless

./: README.md  pyproject.toml  requirements.txt
cricket/: __init__.py  combined.py  utils.py
cricket/balling/: __init__.py  fast.py  overall_bowl_detection.py  slow.py  spin.py  yorker.py
cricket/batting/: __init__.py  cover_drive.py  defense.py  hook_shot.py  overall_shot_detection.py  pull_shot.py  reverse_sweep.py  straight_drive.py  sweep.py
