[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cricket", "cricket.balling", "cricket.batting"]

[project]
name = "cricket-tannmay-headless"
version = "0.1.1"
description = "A computer vision package to recognize and assess different cricket shots and bowling videos."
authors = [
    { name = "Tannmay Khandelwal", email = "tannmaykhandelwal@gmail.com" }
]
license = { "text" = '''MIT License

Copyright (c) 2025 Tannmay Khandelwal

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
''' }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "absl-py==2.1.0",
    "altair==5.4.1",
    "astunparse==1.6.3",
    "attrs==24.2.0",
    "blinker==1.8.2",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "flatbuffers==24.3.25",
    "fonttools==4.54.1",
    "gast==0.6.0",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "google-pasta==0.2.0",
    "grpcio==1.66.2",
    "h5py==3.12.1",
    "idna==3.10",
    "jax==0.4.34",
    "jaxlib==0.4.34",
    "Jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "keras==3.6.0",
    "kiwisolver==1.4.7",
    "libclang==18.1.1",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.1",
    "matplotlib==3.9.2",
    "mdurl==0.1.2",
    "mediapipe==0.10.11",
    "ml-dtypes==0.4.1",
    "namex==0.0.8",
    "narwhals==1.9.3",
    "numpy==1.26.4",
    "opencv-contrib-python-headless==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "opt_einsum==3.4.0",
    "optree==0.13.0",
    "packaging==24.1",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pip==24.2",
    "protobuf==3.20.3",
    "pyarrow==17.0.0",
    "pycparser==2.22",
    "pydeck==0.9.1",
    "Pygments==2.18.0",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
]